--- a/실습코드/004. Extend/index.html
+++ b/실습코드/004. Extend/index.html
@@ -5,9 +5,9 @@
 </head>
 <body>
     <div class="profile-user"></div>
-    <button class="follow-button">button</button>
+    <button class="follow-button"></button>
     <hr>
     <div class="comment-user"></div>
-    <button class="message-button">button</button>
+    <button class="message-button"></button>
 </body>
 </html>
